After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 762463 - [year view] today button doesn't work
[year view] today button doesn't work
Status: RESOLVED FIXED
Product: gnome-calendar
Classification: Applications
Component: User Interface
3.19.x
Other Linux
: Normal minor
: 3.26
Assigned To: GNOME Calendar maintainers
GNOME Calendar maintainers
Depends on:
Blocks:
 
 
Reported: 2016-02-22 14:54 UTC by Marinus Schraal
Modified: 2017-04-17 18:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
year-view: today button not working (1.13 KB, patch)
2016-03-02 03:09 UTC, Isaque Galdino
committed Details | Review

Description Marinus Schraal 2016-02-22 14:54:30 UTC
The today button does not work.
Comment 1 Isaque Galdino 2016-03-02 03:09:27 UTC
Created attachment 322819 [details] [review]
year-view: today button not working

Today button in the headerbar was not working when pressed in the
current year.

Button logic to update side panel was only triggered if there was a
change in the chosen year.

Fixed to update side panel whenever date is changed.
Comment 2 Georges Basile Stavracas Neto 2016-03-02 03:12:28 UTC
*** Bug 762722 has been marked as a duplicate of this bug. ***
Comment 3 Georges Basile Stavracas Neto 2016-03-02 04:10:02 UTC
A good, clean patch. Thanks for the fix.

Attachment 322819 [details] pushed as 03b2ac9 - year-view: today button not working