year-view: today button not working

Today button in the headerbar was not working when pressed in the
current year.

Button logic to update side panel was only triggered if there was a
change in the chosen year.

Fixed to update side panel whenever date is changed.

https://bugzilla.gnome.org/show_bug.cgi?id=762463